--- a/garis_rayya_rabbani_123140018_pertemuan_3/src/components/BookList/BookList.css
+++ b/garis_rayya_rabbani_123140018_pertemuan_3/src/components/BookList/BookList.css
@@ -1,16 +1,6 @@
 /* src/components/BookList/BookList.css */
-
-.book-list-container {
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-  overflow: hidden; /* Agar border-radius di .book-item terlihat */
-}
-
-.book-list-empty {
-  background-color: #ffffff;
-  padding: 3rem 1.5rem;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-  text-align: center;
-  color: #7f8c8d;
+.book-list-new {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem; /* 12px (Meniru space-y-3) */
 }
